try to fix error on mobile

--- a/style.css
+++ b/style.css
@@ -89,11 +89,17 @@ h2 {
     height: 100%;
     width: 100%;
     background: url(assets/img/header.png);
-    background-size: cover;
+    background-size: 180%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     animation-fill-mode: forwards;
     /* animation: animBackground 1s; */
+}
+
+@media screen and (min-width: 600px) {
+    .header #background {
+        background-size: cover;
+    }
 }
 
 .container {
